[package]
name = "trustdnstesting"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.61"
color-eyre = "0.6.2"
eyre = "0.6.8"
tokio = { version = "1.24.1", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
trust-dns-server = { version = "0.22.0", features = ["trust-dns-recursor", "trust-dns-resolver"] }
