[package]
name = "trustdnstesting"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
tokio = { version = "1.25.0", features = ["full"] }
trust-dns-resolver = "0.22.0"
trust-dns-server = { version = "0.22.0", features = ["trust-dns-resolver"] }
